# video-depth-renderer

./: .gitmodules  CMakeLists.txt  README.md
confused/: buffers.cpp  buffers.hpp
lib/ffmpeg/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glew2/: CMakeLists.txt
res/shaders/: basic.frag  basic.vert  combinedTess.frag  combinedTess.tes  combinedTess.vert  copy.frag  copy.tcs  copy.tes  copy.vert  depthTess.tcs  simpleTess.frag  simpleTess.tcs  simpleTess.tes  simpleTess.vert
src/: element_buffer.cpp  element_buffer.hpp  files.cpp  files.hpp  input_handler.cpp  input_handler.hpp  main.cpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  video_reader.cpp  video_reader.hpp
